# codewars

./: .gitignore  LICENSE  README.md  pyproject.toml
python/kyu_4/: permutations.py  range_extraction.py  strip_comments.py  test_permutations.py  test_range_extraction.py  test_strip_comments.py
python/kyu_5/: extract_the_domain_name_from_a_url.py  test_extract_the_domain_name_from_a_url.py
python/kyu_6/: easy_balance_checking.py  test_easy_balance_checking.py
