[tool.poetry]
name = "codewars"
version = "0.1.0"
description = "This repositroy contains solved codewars katas"
authors = ["Florian Kandzia <kandziaflorian@gmail.com>"]
license = "BSD 2-Clause License"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.0.1"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
